[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-genesis-kie"
version = "0.1.0"
description = "ComfyUI custom nodes for Kie.ai — multi-modal AI generation (video, image, music, LLM)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "doomniel", email = "dasomali30@gmail.com" }
]
keywords = ["comfyui", "kie.ai", "ai", "video-generation", "image-generation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/doomniel/genesis-kie-nodes"
Repository = "https://github.com/doomniel/genesis-kie-nodes"
Issues = "https://github.com/doomniel/genesis-kie-nodes/issues"
